--- a/index.html
+++ b/index.html
@@ -5,36 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock, Paper, Scissors</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Rock, Paper, Scissors!</h1>
-    <div class="images">
-      <div class="box">
+    <div class="selection">
+      <div class="box" data-itemname="Rock">
         <div class="box-image">
           <img src="./assets/images/rock.png" alt="Rock" />
         </div>
-
-        <div class="box-button">
-          <button>Rock</button>
-        </div>
       </div>
-      <div class="box">
+      <div class="box" data-itemname="Paper">
         <div class="box-image">
           <img src="./assets/images/paper.png" alt="Paper" />
         </div>
-        <div class="box-button">
-          <button>Paper</button>
+      </div>
+      <div class="box" data-itemname="Scissors">
+        <div class="box-image">
+          <img src="./assets/images/scissors.png" alt="Scissors" />
         </div>
       </div>
+    </div>
+    <div class="battle">
       <div class="box">
         <div class="box-image">
           <img src="./assets/images/scissors.png" alt="Scissors" />
         </div>
-        <div class="box-button">
-          <button>Scissors</button>
+      </div>
+      <div class="box">
+        <div class="box-image">
+          <img src="" alt="" />
         </div>
       </div>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
