added restart button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
       </div>
     </div>
+    <button id="btn-restart">Play Again</button>
     <script src="./index.js"></script>
   </body>
 </html>
