added Rowdies font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Rock, Paper, Scissors</title>
 
     <link rel="stylesheet" href="style.css" />
+
+    <!-- Rowdies font -->
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="container">
@@ -51,7 +54,7 @@
         <div class="ties">Tied: <span></span></div>
         <div class="losses">Lost: <span></span></div>
       </div>
-      <button id="reset-btn">Reset Stats</button>
+      <button id="btn-reset">Reset Stats</button>
     </div>
     <script src="./index.js"></script>
   </body>
