modified button styling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="restart">
-        <button id="btn-restart">Play Again</button>
+        <button id="btn-restart" class="button">Play Again</button>
       </div>
     </div>
     <div class="stats">
@@ -54,7 +54,7 @@
         <div class="ties">Tied: <span></span></div>
         <div class="losses">Lost: <span></span></div>
       </div>
-      <button id="btn-reset">Reset Stats</button>
+      <button id="btn-reset" class="button">Reset Stats</button>
     </div>
     <script src="./index.js"></script>
   </body>
